@@ -5,6 +5,7 @@ Makefile.PL
 test.pl
 Tea_JS.pm
 Tea_JS.xs
+Tea_JS.js
 META.yml
 bin/tea
 examples/old_tea_demo.cgi
