@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Crypt-Tea_JS
-version:      2.22
+version:      2.23
 version_from: Tea_JS.pm
 installdirs:  site
 requires:
