@@ -91,8 +91,6 @@ cyphertext is ascii-encoded to prevent munging. Another option returns
 JavaScript code which offers identical functions in JS, and this can
 be used by CGIs to feed to the browser.
 
-Version 2.22
-
 =head1 AUTHOR
 
 Peter J Billam ( http://www.pjb.com.au/comp/contact.html )
